--- a/webserver.yml
+++ b/webserver.yml
@@ -1,57 +1,27 @@
 ---
-- name: Install and Configure a Web Server
+- name: Install and Start Apache2 Web Server
   hosts: all
-  become: yes  # Run as sudo
+  become: yes  # Run as root
 
   tasks:
-    - name: Install Apache on Debian-based systems
+    - name: Update APT package cache
+      apt:
+        update_cache: yes
+
+    - name: Install Apache2
       apt:
         name: apache2
         state: present
-      when: ansible_os_family == "Debian"
 
-    - name: Install Nginx on RHEL-based systems
-      yum:
-        name: nginx
-        state: present
-      when: ansible_os_family == "RedHat"
-
-    - name: Start and enable Apache (Debian)
-      systemd:
+    - name: Start Apache2 service
+      service:
         name: apache2
         state: started
-        enabled: yes
+        enabled: yes  # Enable on boot
+
+    - name: Open HTTP (port 80) in firewall
+      ufw:
+        rule: allow
+        port: 80
+        proto: tcp
       when: ansible_os_family == "Debian"
-
-    - name: Start and enable Nginx (RedHat)
-      systemd:
-        name: nginx
-        state: started
-        enabled: yes
-      when: ansible_os_family == "RedHat"
-
-    - name: Deploy a Simple HTML Page (Apache)
-      copy:
-        content: "<h1>Hi Akshatha, Welcome to devops!</h1>"
-        dest: "/var/www/html/index.html"
-      when: ansible_os_family == "Debian"
-
-    - name: Deploy a Simple HTML Page (Nginx)
-      copy:
-        content: "<h1>Hi Akshatha, Welcome to devops </h1>"
-        dest: "/usr/share/nginx/html/index.html"
-      when: ansible_os_family == "RedHat"
-
-    - name: Allow HTTP Traffic (Firewall)
-      firewalld:
-        service: http
-        permanent: yes
-        state: enabled
-      when: ansible_os_family == "RedHat"
-      ignore_errors: yes  # Ignore errors if firewalld is not installed
-
-    - name: Verify Web Server is Running
-      uri:
-        url: "http://localhost"
-        status_code: 200
-      ignore_errors: yes  # Ignore errors if running remotely
